--- a/HeltonHeltonLyanRicardo/HeltonHeltonLyanRicardo/View/ShoppingList.storyboard
+++ b/HeltonHeltonLyanRicardo/HeltonHeltonLyanRicardo/View/ShoppingList.storyboard
@@ -11,60 +11,94 @@
         <scene sceneID="FYK-MO-Ift">
             <objects>
                 <tableViewController id="Kd2-TM-kl7" customClass="ProductListViewController" customModule="HeltonHeltonLyanRicardo" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="zr3-tW-dg4">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="zr3-tW-dg4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <view key="tableFooterView" contentMode="scaleToFill" id="99U-vT-pQN">
-                            <rect key="frame" x="0.0" y="150" width="414" height="44"/>
+                            <rect key="frame" x="0.0" y="182" width="414" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Product" rowHeight="94" id="1Gt-QS-eOa" customClass="ProductTableViewCell" customModule="HeltonHeltonLyanRicardo" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="94"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Product" rowHeight="126" id="1Gt-QS-eOa" customClass="ProductTableViewCell" customModule="HeltonHeltonLyanRicardo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="126"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1Gt-QS-eOa" id="fTh-3J-IDy">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="94"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="126"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gP3-TT-eAp">
-                                            <rect key="frame" x="5" y="5" width="90" height="84"/>
+                                            <rect key="frame" x="10" y="5" width="116" height="116"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="90" id="OIB-wn-dxc"/>
-                                                <constraint firstAttribute="width" constant="90" id="cYI-TM-NiR"/>
+                                                <constraint firstAttribute="height" constant="116" id="9vz-RH-QKX"/>
+                                                <constraint firstAttribute="width" constant="116" id="dXc-Y3-89h"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SlX-6S-d0g">
-                                            <rect key="frame" x="110" y="16" width="42" height="36"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="753" text="Product Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SlX-6S-d0g">
+                                            <rect key="frame" x="134" y="13" width="275" height="26.5"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KIt-jq-YEV">
-                                            <rect key="frame" x="110" y="67" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="753" text="Forma de pagamento:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c6e-c8-0xs">
+                                            <rect key="frame" x="134" y="47.5" width="105" height="12"/>
+                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="10"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="753" text="Estado da compra:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GTT-nq-cLG">
+                                            <rect key="frame" x="134" y="67.5" width="89.5" height="12"/>
+                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="10"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" text="Cartão" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hhk-Cj-KzS">
+                                            <rect key="frame" x="247" y="45" width="40" height="15"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="252" text="$ 1,200.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KIt-jq-YEV">
+                                            <rect key="frame" x="134" y="89" width="270" height="24"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" text="Miami" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KZ0-r2-DYT">
+                                            <rect key="frame" x="247" y="68" width="35.5" height="11"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="gP3-TT-eAp" firstAttribute="leading" secondItem="fTh-3J-IDy" secondAttribute="leading" constant="5" id="8RV-kv-ySB"/>
-                                        <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="KIt-jq-YEV" secondAttribute="trailing" priority="750" constant="15" id="FXz-2I-fDc"/>
-                                        <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="SlX-6S-d0g" secondAttribute="trailing" priority="750" constant="15" id="IhY-Du-Gfh"/>
-                                        <constraint firstAttribute="bottom" secondItem="gP3-TT-eAp" secondAttribute="bottom" constant="5" id="RDz-Yg-iBE"/>
-                                        <constraint firstItem="gP3-TT-eAp" firstAttribute="top" secondItem="fTh-3J-IDy" secondAttribute="top" constant="5" id="TdB-WJ-4Ee"/>
-                                        <constraint firstItem="KIt-jq-YEV" firstAttribute="bottom" secondItem="fTh-3J-IDy" secondAttribute="bottomMargin" constant="5" id="ojB-Oq-7Vc"/>
-                                        <constraint firstItem="SlX-6S-d0g" firstAttribute="leading" secondItem="gP3-TT-eAp" secondAttribute="trailing" constant="15" id="roh-fr-r7F"/>
-                                        <constraint firstItem="SlX-6S-d0g" firstAttribute="top" secondItem="fTh-3J-IDy" secondAttribute="topMargin" constant="5" id="srp-5U-4Km"/>
-                                        <constraint firstItem="KIt-jq-YEV" firstAttribute="top" secondItem="SlX-6S-d0g" secondAttribute="bottom" constant="15" id="uhI-Ag-Vdc"/>
-                                        <constraint firstItem="KIt-jq-YEV" firstAttribute="leading" secondItem="gP3-TT-eAp" secondAttribute="trailing" constant="15" id="yxF-86-4dm"/>
+                                        <constraint firstAttribute="trailing" secondItem="KIt-jq-YEV" secondAttribute="trailing" constant="10" id="9XO-c5-x9R"/>
+                                        <constraint firstItem="KZ0-r2-DYT" firstAttribute="centerY" secondItem="GTT-nq-cLG" secondAttribute="centerY" id="BHD-IM-JK1"/>
+                                        <constraint firstItem="SlX-6S-d0g" firstAttribute="leading" secondItem="gP3-TT-eAp" secondAttribute="trailing" constant="8" id="DEf-mk-NBp"/>
+                                        <constraint firstItem="GTT-nq-cLG" firstAttribute="leading" secondItem="SlX-6S-d0g" secondAttribute="leading" id="FKQ-dM-ehi"/>
+                                        <constraint firstItem="SlX-6S-d0g" firstAttribute="top" secondItem="gP3-TT-eAp" secondAttribute="top" constant="8" id="KkR-fi-iLz"/>
+                                        <constraint firstItem="c6e-c8-0xs" firstAttribute="top" secondItem="SlX-6S-d0g" secondAttribute="bottom" constant="8" id="NT3-3C-stg"/>
+                                        <constraint firstItem="KZ0-r2-DYT" firstAttribute="leading" secondItem="hhk-Cj-KzS" secondAttribute="leading" id="Uf1-0J-OKK"/>
+                                        <constraint firstAttribute="bottom" secondItem="gP3-TT-eAp" secondAttribute="bottom" constant="5" id="VX5-Ln-nIB"/>
+                                        <constraint firstItem="KIt-jq-YEV" firstAttribute="leading" secondItem="gP3-TT-eAp" secondAttribute="trailing" constant="8" id="WCY-1B-lSW"/>
+                                        <constraint firstItem="gP3-TT-eAp" firstAttribute="leading" secondItem="fTh-3J-IDy" secondAttribute="leading" constant="10" id="bei-rx-ZTC"/>
+                                        <constraint firstItem="KIt-jq-YEV" firstAttribute="bottom" secondItem="gP3-TT-eAp" secondAttribute="bottom" constant="-8" id="jV6-9j-opb"/>
+                                        <constraint firstItem="KZ0-r2-DYT" firstAttribute="top" secondItem="hhk-Cj-KzS" secondAttribute="bottom" constant="8" id="mh7-nb-W2Q"/>
+                                        <constraint firstItem="hhk-Cj-KzS" firstAttribute="leading" secondItem="c6e-c8-0xs" secondAttribute="trailing" constant="8" symbolic="YES" id="qSG-cS-9QD"/>
+                                        <constraint firstItem="gP3-TT-eAp" firstAttribute="top" secondItem="fTh-3J-IDy" secondAttribute="top" constant="5" id="qT7-rI-s2I"/>
+                                        <constraint firstAttribute="trailing" secondItem="SlX-6S-d0g" secondAttribute="trailing" constant="5" id="qiF-Md-Gyd"/>
+                                        <constraint firstItem="c6e-c8-0xs" firstAttribute="leading" secondItem="SlX-6S-d0g" secondAttribute="leading" id="xr1-cB-Gmu"/>
+                                        <constraint firstItem="GTT-nq-cLG" firstAttribute="top" secondItem="c6e-c8-0xs" secondAttribute="bottom" constant="8" id="ylK-dr-6YN"/>
+                                        <constraint firstItem="hhk-Cj-KzS" firstAttribute="baseline" secondItem="c6e-c8-0xs" secondAttribute="baseline" id="zEI-O3-8Gq"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="productImageView" destination="gP3-TT-eAp" id="FGh-Sd-2d9"/>
                                     <outlet property="productNameLabel" destination="SlX-6S-d0g" id="ILB-Ic-Ig1"/>
+                                    <outlet property="productPaymentMode" destination="hhk-Cj-KzS" id="rhX-HE-YC6"/>
                                     <outlet property="productPriceLabel" destination="KIt-jq-YEV" id="o6V-8I-3As"/>
+                                    <outlet property="productStateName" destination="KZ0-r2-DYT" id="P6B-LY-eez"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
